{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 36,
  "lineage": "77072704-b15d-20c8-3815-cc93b27b224c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/loadBalancers/udacity-project-1-LoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/publicIPAddresses/udacity-project-1-public-ip"
              }
            ],
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/loadBalancers/udacity-project-1-LoadBalancer",
            "location": "eastus",
            "name": "udacity-project-1-LoadBalancer",
            "resource_group_name": "udacity-project-1-resources",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/loadBalancers/udacity-project-1-LoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/loadBalancers/udacity-project-1-LoadBalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "udacity-project-1-resources"
          },
          "depends_on": [
            "azurerm_lb.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-0",
            "internal_domain_name_suffix": "qa2gizs1uodebaxu1qowx40fsa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-0",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/virtualNetworks/udacity-project-1-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "name": "udacity-project-1-nic-0",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "udacity-project-1-resources"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-1",
            "internal_domain_name_suffix": "qa2gizs1uodebaxu1qowx40fsa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-1",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/virtualNetworks/udacity-project-1-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "name": "udacity-project-1-nic-1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "udacity-project-1-resources"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-2",
            "internal_domain_name_suffix": "qa2gizs1uodebaxu1qowx40fsa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-2",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/virtualNetworks/udacity-project-1-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "name": "udacity-project-1-nic-2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "udacity-project-1-resources"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg",
            "location": "eastus",
            "name": "udacity-project-1-nsg",
            "resource_group_name": "udacity-project-1-resources",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowInternal",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg/securityRules/AllowSubnetInternal",
            "name": "AllowSubnetInternal",
            "network_security_group_name": "udacity-project-1-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "udacity-project-1-resources",
            "source_address_prefix": "10.0.2.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "DenyExternal",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg/securityRules/DenyAllExternal",
            "name": "DenyAllExternal",
            "network_security_group_name": "udacity-project-1-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "udacity-project-1-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/publicIPAddresses/udacity-project-1-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.76.85.155",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "udacity-project-1-public-ip",
            "resource_group_name": "udacity-project-1-resources",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/virtualNetworks/udacity-project-1-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "udacity-project-1-resources",
            "virtual_network_name": "udacity-project-1-network"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "66643880-a35b-4086-82f4-dc1d6bfb4590",
            "id": "/subscriptions/4fc8a9ce-bdb4-476f-aa96-2948a69c3f62/resourceGroups/udacity-project-1-resources/providers/Microsoft.Network/virtualNetworks/udacity-project-1-network",
            "location": "eastus",
            "name": "udacity-project-1-network",
            "resource_group_name": "udacity-project-1-resources",
            "vm_protection_enabled": false
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}